--- a/index.html
+++ b/index.html
@@ -99,6 +99,51 @@
         .topnav-right {
             float: right;
         }
+        
+        @media screen and (max-width: 600px) {
+            .topnav a:not(:first-child) {
+                display: none;
+            }
+            .topnav a.icon {
+                float: right;
+                display: block;
+            }
+            .btnstyle {
+                padding-left: 7rem;
+                padding-top: 34px;
+            }
+        }
+        
+        @media screen and (max-width: 400px) {
+            .topnav.responsive {
+                position: relative;
+            }
+            .topnav.responsive .icon {
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+            .topnav.responsive a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+            .topnav.responsive .dropdown {
+                float: none;
+            }
+            .topnav.responsive .dropdown-content {
+                position: relative;
+            }
+            .topnav.responsive .dropdown .dropbtn {
+                display: block;
+                width: 100%;
+                text-align: left;
+            }
+            .btnstyle {
+                padding-left: 7rem;
+                padding-top: 34px;
+            }
+        }
     </style>
     <!-- End of CSS -->
 </head>
