--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="topnav-right">
             <a href="index.html">Home</a>
             <a href="View.php">View Customers</a>
-            <a href="Transc.php">View Transactions</a>
+            <a href="transc.php">View Transactions</a>
         </div>
     </div>
 
