--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Basic Bank System</title>
+    <title>Online Online Online Online Online Online Online Bank Serivice</title>
     <style>
         body {
             background-color: white;
@@ -155,19 +155,20 @@
     </div>
 
     <div class="header">
-        <h5 style="padding-right: 1rem">Bank Serivice</h5>
+        <h5 style="padding-right: 1rem">Online Bank Serivice</h5>
         <div class="img">
             <img src="1.png"></img>
         </div>
     </div>
     <br><br><br><br><br>
     <div class="content">
-        <p style="color: #243e83; padding-left: 1rem;">Easy To Transfer & Get </p>
+        <p style="color: #243e83; padding-left: 1rem;">We Promise To Bring
+            <br>The Best Service For You</p>
         <div class="btnstyle">
             <div class="btnadj">
-                <a class="button" href="view.php">View Customers</a>
+                <a class="button" href="view.php">Customers</a>
                 <div class="btnadj2">
-                    <a class="button" href="transc.php" style="margin-top: 0px;">ViewTransactions</a>
+                    <a class="button" href="transc.php" style="margin-top: 0px;">Transactions</a>
                 </div>
             </div>
         </div>
