--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Online Online Online Online Online Online Online Bank Serivice</title>
+    <title> Online Bank Service</title>
     <style>
         body {
             background-color: white;
